devops/istio-routing/devops-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: devops-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway # Istio의 기본 Ingress Gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.seoyoonho.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls: 
      mode: PASSTHROUGH
    hosts:
    - "*.seoyoonho.com"
