devops/istio-routing/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd
spec:
  hosts:
  - "argocd.seoyoonho.com"
  gateways:
  - argocd/devops-gateway
  tls:
  - match:
    - port: 443
      sniHosts: 
      - argocd.seoyoonho.com
    # - uri:
    #     prefix: /
    route:
    - destination:
        host: argocd-server
        # port:
        #   number: 443
