devops/istio-routing/harbor-virtualservice_tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-virtualservice
  namespace: harbor
spec:
  hosts:
  - "harbor.seoyoonho.com"
  gateways:
  - argocd/devops-gateway
  tls:
  - match:
    - port: 443
      sniHosts: 
      - harbor.seoyoonho.com
    # - uri:
    #     prefix: /
    route:
    - destination:
        host: harbor
        # port:
        #   number: 443
