devops/istio-routing/jenkins-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jenkins-gateway
  namespace: jenkins
spec:
  selector:
    istio: ingressgateway # Istio의 기본 Ingress Gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "jenkins.seoyoonho.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins-virtualservice
  namespace: jenkins
spec:
  hosts:
  - "jenkins.seoyoonho.com"
  gateways:
  - jenkins-gateway
  http:
  - match:
    - uri: 
        prefix: "/"
    route:
    - destination:
        host: jenkins
