devops/istio-routing/jenkins-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins-virtualservice
  namespace: jenkins
spec:
  hosts:
  - "jenkins.seoyoonho.com"
  gateways:
  - argocd/devops-gateway
  http:
  - match:
    - uri: 
        prefix: "/"
    route:
    - destination:
        host: jenkins
        port:
          number: 8080
