devops/istio-routing/sonarqube-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sonar-gateway
  namespace: sonarqube
spec:
  selector:
    istio: ingressgateway # Istio의 기본 Ingress Gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "sonar.seoyoonho.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonar-virtualservice
  namespace: sonarqube
spec:
  hosts:
  - "sonar.seoyoonho.com"
  gateways:
  - sonar-gateway
  http:
  - match:
    - uri: 
        prefix: "/"
    route:
    - destination:
        host: sonarqube-sonarqube
