devops/istio-routing/sonarqube-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonar-virtualservice
  namespace: sonarqube
spec:
  hosts:
  - "sonar.seoyoonho.com"
  gateways:
  - argocd/devops-gateway
  http:
  - match:
    - uri: 
        prefix: "/"
    route:
    - destination:
        host: sonarqube-sonarqube
